[JavaSE] 新增 GC 信息